google style links, medium style paragraph and line height

--- a/minimalist-blog/Using-Markdown-to-write-posts.html
+++ b/minimalist-blog/Using-Markdown-to-write-posts.html
@@ -18,7 +18,7 @@
         <!--Header-->
         <header>
             <a href="index.html">
-                <img src="logo.svg" alt="logo">
+                <img src="logo.svg" alt="logo" id="logo">
             </a>
 
             <!--Article -->
