--- a/minimalist-blog/Why-I'm-making-a-custom-blog.html
+++ b/minimalist-blog/Why-I'm-making-a-custom-blog.html
@@ -2,106 +2,134 @@
 <!--meta-->
 
 <head>
-    <!--universal-->
-    <meta charset="utf-8">
-    <meta lang="en">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--content description-->
-    <title>Minimalist Blog</title>
-    <meta name="description" content="A minimalist blog">
-    <!--feuille de style-->
-    <link rel="stylesheet" href="main.css">
+	<!--universal-->
+	<meta charset="utf-8">
+	<meta lang="en">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!--content description-->
+	<!--CUSTOMIZATION NEEDED PER ARTICLE-->
+	<title>Why I'm making a custom blog</title>
+	<meta name="description" content="A minimalist blog">
+
+	<!--feuille de style-->
+	<link rel="stylesheet" href="main.css">
 </head>
 
+<!--page-->
+
 <body>
+	<!--wrapper-->
+	<div class="wrapper">
+		<!--Content-->
+		<!--Header-->
 
-    <div class="wrapper">
+		<header>
+			<!--Logo-->
+			<a href="index.html">
+				<img src="logo.svg" alt="logo" id="logo">
+			</a>
 
-        <!--Header-->
-        <header>
-            <a href="index.html">
-                <img src="logo.svg" alt="logo">
-            </a>
+			<!--Article Description -->
+			<!--Titre -->
+			<!--CUSTOMIZATION NEEDED PER ARTICLE-->
+			<h1>Why I'm making a custom blog</h1>
+			<!--Credit -->
+			<div class="credit">
+				<p>
+					Written by Antoine - December 14th, 2018
+				</p>
+			</div>
+		</header>
 
-            <!--Article -->
-            <!--Titre -->
-            <h1 class="articleTitle">Why I'm making a custom blog</h1>
-            <!--Credit -->
-            <div class="credit">
-                <p>
-                    Written by Antoine - December 14th, 2018
-                </p>
-            </div>
-        </header>
-        <!--Article Text -->
-        <p><code>Hello World!</code></p>
-        <p>
-                Why I'm making a custom blog instead of using ready-to-use solutions like Blogger, Medium or Wordpress:
-        </p>
-        <p>
-<ul>
-    <li>
-            Blogger is really easy to use. But it's not original, and you cannot customize it much. Actually, you can barely customize it. And i'm not even sure it's still maintained.
+		<!--ACTUAL ARTICLE CONTENT STARTS HERE-->
 
-    </li>
-    <li>
-            Medium is definitely an option to consider. And I might decide to use Medium in the future. But again, it's not original, and it does not feel like my own.
+		<p><code>Hello World!</code></p>
+		<p>
+			Why I'm making a custom blog instead of using ready-to-use solutions like Blogger, Medium or
+			Wordpress:
+		</p>
+		<p>
+			<ul>
+				<li>
+					Blogger is really easy to use. But it's not original, and you cannot customize
+					it much. Actually, you can barely customize it. And i'm not even sure it's
+					still maintained.
 
-    </li>
-    <li>
-            Lastly, Wordpress is something I've never used yet. I migt give it a shot very soon. I think it's fully customisable. So there is no excuse here. Plus, it is said to offer many things as a bonus. 
+				</li>
+				<li>
+					Medium is definitely an option to consider. And I might decide to use Medium in
+					the future. But again, it's not original, and it does not feel like my own.
 
-    </li>
+				</li>
+				<li>
+					Lastly, Wordpress is something I've never used yet. I migt give it a shot very
+					soon. I think it's fully customisable. So there is no excuse here. Plus, it is
+					said to offer many things as a bonus.
 
-</ul>
-        </p>
-        <p>
-                So in the end, what did I choose ? I chose to do everything without third parties, except for the hosting, obviously:
+				</li>
 
-        </p>
-        <p>
-                <ul>
-                        <li>
-                                Hosting is free and is Github Pages, aka github.io pages. Main advantage is that whenever I commit a change on my git repo, the website is directly updated.
+			</ul>
+		</p>
+		<p>
+			So in the end, what did I choose ? I chose to do everything without third parties, except for
+			the hosting, obviously:
 
-                        </li>
-                        <li>
-                                Html and Css is fully made from scratch. Except from a very minimal html template, i wrote everything myself trying to keep it as small as possible, in a minimalist approach.
-                        </li>
-                        <li>
-                                Taking the website nshipster.com as a model, I try to find what is necessary, in the content structure and in the styling.
+		</p>
+		<p>
+			<ul>
+				<li>
+					Hosting is free and is Github Pages, aka github.io pages. Main advantage is
+					that whenever I commit a change on my git repo, the website is directly
+					updated.
 
-                        </li>
-                    
-                    </ul>
-        </p>
-        <p>
-                This is it for the first article on this website. See you around, folks!
+				</li>
+				<li>
+					Html and Css is fully made from scratch. Except from a very minimal html
+					template, i wrote everything myself trying to keep it as small as possible, in
+					a minimalist approach.
+				</li>
+				<li>
+					Taking the website nshipster.com as a model, I try to find what is necessary,
+					in the content structure and in the styling.
 
-        </p>
-        <hr>
-        <h2>Written by Antoine</h2>
+				</li>
 
-        <!--Footer-->
-        <hr>
-        <footer>
-            Copyright 2018 Antoine Weber
-        </footer>
+			</ul>
+		</p>
+		<p>
+			This is it for the first article on this website. See you around, folks!
 
-
-    </div>
-    <!--Fin du wrapper-->
-
-
-
-
-
-
-
+		</p>
 
 
 
-    <script src="" async defer></script>
+		<!--ACTUAL ARTICLE CONTENT ENDS HERE-->
+
+		<hr>
+		<h2>Written by Antoine</h2>
+		<hr>
+		</article>
+
+
+		<!--Footer-->
+		<footer>
+			Copyright 2018 Antoine Weber
+		</footer>
+	</div>
+	<!--Fin du wrapper-->
+
+
+
+
+
+
+
+
+
+
+	<!--scripts-->
+	<script src="" async defer></script>
 </body>
 
 </html>
