--- a/minimalist-blog/article-template.html
+++ b/minimalist-blog/article-template.html
@@ -2,73 +2,71 @@
 <!--meta-->
 
 <head>
-    <!--universal-->
-    <meta charset="utf-8">
-    <meta lang="en">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--universal-->
+  <meta charset="utf-8">
+  <meta lang="en">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--content description-->
-    <!--CUSTOMIZATION NEEDED PER ARTICLE-->
-    <title>A new dawn</title>
-    <meta name="description" content="A minimalist blog">
+  <!--content description-->
+  <!--CUSTOMIZATION NEEDED PER ARTICLE-->
+  <title>A new dawn</title>
+  <meta name="description" content="A minimalist blog">
 
-    <!--feuille de style-->
-    <link rel="stylesheet" href="main.css">
+  <!--feuille de style-->
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <!--page-->
 
 <body>
-    <!--wrapper-->
-    <div class="wrapper">
-        <!--Content-->
-        <!--Header-->
-        <article>
-            <header>
-                <!--Logo-->
-                <a href="index.html">
-                    <img src="logo.svg" alt="logo">
-                </a>
+  <!--wrapper-->
+  <div class="wrapper">
+    <!--Content-->
+    <!--Header-->
 
-                <!--Article Description -->
-                <!--Titre -->
-                <!--CUSTOMIZATION NEEDED PER ARTICLE-->
-                <h1>A new dawn, A new dream</h1>
-                <!--Credit -->
-                <div class="credit">
-                    <p>
-                        Written by Antoine - December 14th, 2018
-                    </p>
-                </div>
-            </header>
+    <header>
+      <!--Logo-->
+      <a href="index.html">
+        <img src="logo.svg" alt="logo" id="logo">
+      </a>
 
-            <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
-            
-            <!--ARTICLE CONTENT:-->
-            <p>
-                Esse tamquam tractatos vim te, nam ad civibus abhorreant. His ex elitr dolore prodesset, nam discere
-                consetetur an. Vidit graeci in vis. Vix ut maiestatis constituam, sea ne enim scripta. Pro an inermis
-                vulputate, vel omnis dicat sonet an.
-            </p>
-            <!--ARTICLE CONTENT-->
-            
+      <!--Article Description -->
+      <!--Titre -->
+      <!--CUSTOMIZATION NEEDED PER ARTICLE-->
+      <h1>A new dawn, A new dream</h1>
+      <!--Credit -->
+      <div class="credit">
+        <p>
+          Written by Antoine - December 14th, 2018
+        </p>
+      </div>
+    </header>
 
-            <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
+    <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
 
-            <hr>
-            <h2>Written by Antoine</h2>
-            <hr>
-        </article>
+    <!--ARTICLE CONTENT:-->
+    <p>
+      Esse tamquam tractatos vim te, nam ad civibus abhorreant. His ex elitr dolore prodesset, nam discere
+      consetetur an. Vidit graeci in vis. Vix ut maiestatis constituam, sea ne enim scripta. Pro an inermis
+      vulputate, vel omnis dicat sonet an.
+    </p>
+    <!--ARTICLE CONTENT-->
 
 
-        <!--Footer-->
-        <footer>
-            Copyright 2018 Antoine Weber
-        </footer>
-    </div>
-    <!--Fin du wrapper-->
+    <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
+
+    <hr>
+    <h2>Written by Antoine</h2>
+    <hr>
 
 
+
+    <!--Footer-->
+    <footer>
+      Copyright 2018 Antoine Weber
+    </footer>
+  </div>
+  <!--Fin du wrapper-->
 
 
 
@@ -77,8 +75,10 @@
 
 
 
-    <!--scripts-->
-    <script src="" async defer></script>
+
+
+  <!--scripts-->
+  <script src="" async defer></script>
 </body>
 
 </html>
