--- a/minimalist-blog/index.html
+++ b/minimalist-blog/index.html
@@ -23,7 +23,7 @@
         <!--Header-->
         <!--Logo-->
         <a href="index.html">
-            <img src="logo.svg" alt="logo">
+            <img src="logo.svg" alt="logo" id="logo">
         </a>
         <!--Title-->
         <h1>slk333|Awew33 </h1>
@@ -61,6 +61,21 @@
         </p>
         <!--Article Link-->
         <a href="Using-Markdown-to-write-posts.html">Continue Reading</a>
+        <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
+
+        <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
+        <!--Article 3-->
+        <!--Article Title-->
+        <h2>
+            Using Markdown to write posts
+        </h2>
+        <!--Article Description-->
+        <p>
+            The problem: It's cumbersome to write html by hand. When you write a blog post, you want to focus on what
+            you write, and not on what html tag you will use here and what css class you will use there.
+        </p>
+        <!--Article Link-->
+        <a href="sdssq">Continue Reading</a>
         <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
 
 
