adding the blog to the homepage links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="flex"><a href="lexco/index.html">LEXCO</a></div>
 				<div class="flex"><a href="bootstrap/index.html">BOOSTRAP DEMO</a></div>
 				<div class="flex"><a href="i-bail/index.html">I-BAIL</a></div>
-				<div></div>
+				<div class="flex"><a href="minimalist-blog/index.html">BLOG</a></div>
 				<div></div>
 				<div></div>
 				<div></div>
