--- a/minimalist-blog/Why-I'm-making-a-custom-blog.html
+++ b/minimalist-blog/Why-I'm-making-a-custom-blog.html
@@ -63,7 +63,7 @@
 
 				</li>
 				<li>
-					Lastly, Wordpress is something I've never used yet. I migt give it a shot very
+					Lastly, Wordpress is something I've never used yet. I might give it a shot very
 					soon. I think it's fully customisable. So there is no excuse here. Plus, it is
 					said to offer many things as a bonus.
 
