--- a/minimalist-blog/index.html
+++ b/minimalist-blog/index.html
@@ -32,6 +32,32 @@
 
         <!--Articles-->
 
+
+
+        <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
+        <!--Article 3-->
+        <!--Article Title-->
+        <h2>
+            Why would you learn programming
+
+        </h2>
+        <!--Article Description-->
+        <p>
+            One of the best way to put it is: "To be able to talk to the computer". But it's not only to talk to the
+            computer. It's more like to use the computer as an extension of your brain, just like we use the machines
+            to extend our body limited capabilities. So what does a computer have to offer that we don't have already ?
+        </p>
+        <!--Article Link-->
+        <a href="Why-is-it-worth-learn-programming.html">Continue Reading</a>
+        <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
+
+
+
+
+
+
+
+
         <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
         <!--Article 1-->
         <!--Article Title-->
@@ -47,8 +73,8 @@
         <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
 
 
-        
-         <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
+
+        <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
         <!--Article 2-->
         <!--Article Title-->
         <h2>
@@ -63,7 +89,10 @@
         <a href="Using-Markdown-to-write-posts.html">Continue Reading</a>
         <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
 
-     
+
+
+
+
 
 
         <!--Footer-->
