add 'this week..' to better express that this is a blog

--- a/minimalist-blog/index.html
+++ b/minimalist-blog/index.html
@@ -33,6 +33,9 @@
         <!--Articles-->
 
 
+        <br>
+        <small style="font-size:15px">This Week...</small>
+
 
         <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
         <!--Article 3-->
@@ -55,22 +58,24 @@
 
 
 
+        <div style="display:none">
 
 
-
-        <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
+            <!--ACTUAL ARTICLE CONTENT STARTS HERE
         <!--Article 1-->
-        <!--Article Title-->
-        <h2>
-            Why I'm making a custom blog
-        </h2>
-        <!--Article Description-->
-        <p>
-            Why I'm making a custom blog instead of using ready-to-use solutions like Blogger, Medium or Wordpress.
-        </p>
-        <!--Article Link-->
-        <a href="Why-I'm-making-a-custom-blog.html">Continue Reading</a>
-        <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
+            <!--Article Title-->
+            <h2>
+                Why I'm making a custom blog
+            </h2>
+            <!--Article Description-->
+            <p>
+                Why I'm making a custom blog instead of using ready-to-use solutions like Blogger, Medium or Wordpress.
+            </p>
+            <!--Article Link-->
+            <a href="Why-I'm-making-a-custom-blog.html">Continue Reading</a>
+            <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
+        </div>
+
 
 
 
@@ -82,8 +87,9 @@
         </h2>
         <!--Article Description-->
         <p>
-            The problem: It's cumbersome to write html by hand. When you write a blog post, you want to focus on what
-            you write, and not on what html tag you will use here and what css class you will use there.
+            It's cumbersome to write html by hand. When you write a blog post, you want to focus on what
+            you write, and not on what html or css tags you will use here and there. On the other
+            hand, you will still need to format your text in the end. How can Markdown help us in that regard ?
         </p>
         <!--Article Link-->
         <a href="Using-Markdown-to-write-posts.html">Continue Reading</a>
@@ -96,7 +102,15 @@
 
 
         <!--Footer-->
-        <hr style="margin-top:25px">
+        <hr style="margin-top:30px">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <footer>
             Copyright 2018 Antoine Weber
         </footer>
