date des articlese grâce à un logo svg sur la page d'accueil

--- a/minimalist-blog/index.html
+++ b/minimalist-blog/index.html
@@ -40,17 +40,31 @@
             <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
             <!--Article 4-->
             <!--Article Title-->
+
             <h2>
                 Embed and stylize code in a webpage
+                <span class="info">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                        <rect x="0" fill="none" width="16" height="16" />
+                        <g>
+                            <path d="M8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6zm2.5 9.5L7.2 8.3V4h1.5v3.7l2.8 2.8-1 1z" />
+                        </g>
+                    </svg>
+                    December 21th 2018
+                </span>
 
             </h2>
+
             <!--Article Description-->
+
             <p>
                 If you want to embed some code in your article, and want it to look nice, there is a simple and quick
                 way to do it. You can use Prettify by Google.
             </p>
             <!--Article Link-->
+
             <a href="Embedding-code-in-html.html">Continue Reading</a>
+
             <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
 
 
@@ -60,11 +74,21 @@
             <!--Article Title-->
             <h2>
                 Why would you learn programming
+                <span class="info">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                        <rect x="0" fill="none" width="16" height="16" />
+                        <g>
+                            <path d="M8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6zm2.5 9.5L7.2 8.3V4h1.5v3.7l2.8 2.8-1 1z" />
+                        </g>
+                    </svg>
+                    December 18th 2018
+                </span>
 
             </h2>
             <!--Article Description-->
             <p>
-                One of the best way to put it is: "To be able to talk to the computer". But it's more than that. It's more like to use the computer as an extension of your brain, just like we use the
+                One of the best way to put it is: "To be able to talk to the computer". But it's more than that. It's
+                more like to use the computer as an extension of your brain, just like we use the
                 machines
                 to extend our body limited capabilities. So what does a computer have to offer that we don't have
                 already ?
