--- a/minimalist-blog/svg.html
+++ b/minimalist-blog/svg.html
@@ -13,7 +13,7 @@
 
     <!--feuille de style-->
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="Genericons-Neue.css">
+   
 
 
 </head>
@@ -49,13 +49,9 @@
         <p>
 
             <span class="info">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                <rect x="0" fill="none" width="16" height="16" />
-                <g>
-                    <path d="M8 8c1.7 0 3-1.3 3-3S9.7 2 8 2 5 3.3 5 5s1.3 3 3 3zm2 1H6c-1.7 0-3 1.3-3 3v2h10v-2c0-1.7-1.3-3-3-3z" />
-                </g>
-            </svg>
-            slk333
+           
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><rect x="0" fill="none" width="16" height="16"/><g><path d="M8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6zm2.5 9.5L7.2 8.3V4h1.5v3.7l2.8 2.8-1 1z"/></g></svg>
+            December 22th 2018
         </span>
            
 
