--- a/minimalist-blog/index.html
+++ b/minimalist-blog/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="A minimalist blog">
     <!--feuille de style-->
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
 
 <!--page-->
