rubrique archives, 2 colonnes, dans la section #archives, css à refactor

--- a/minimalist-blog/index.html
+++ b/minimalist-blog/index.html
@@ -23,11 +23,11 @@
 
         <!--Header-->
         <!--Logo-->
-       
-            <img src="logo.svg" alt="logo" id="logo">
-        
+
+        <img src="logo.svg" alt="logo" id="logo">
+
         <!--Title-->
-        <h1>slk333|Awew33 </h1>
+        <h1 style="letter-spacing:0.1em;">slk333|Awew33 </h1>
         <hr>
 
 
@@ -44,15 +44,6 @@
 
             <h2>
                 Embed and stylize code in a webpage
-                <span class="info">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                        <rect x="0" fill="none" width="16" height="16" />
-                        <g>
-                            <path d="M8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6zm2.5 9.5L7.2 8.3V4h1.5v3.7l2.8 2.8-1 1z" />
-                        </g>
-                    </svg>
-                    December 21th 2018
-                </span>
 
             </h2>
 
@@ -75,15 +66,7 @@
             <!--Article Title-->
             <h2>
                 Why would you learn programming
-                <span class="info">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                        <rect x="0" fill="none" width="16" height="16" />
-                        <g>
-                            <path d="M8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6zm2.5 9.5L7.2 8.3V4h1.5v3.7l2.8 2.8-1 1z" />
-                        </g>
-                    </svg>
-                    December 18th 2018
-                </span>
+
 
             </h2>
             <!--Article Description-->
@@ -101,52 +84,56 @@
         </section>
 
 
-
+        <hr style="margin-top:30px">
 
         <section id="archives">
+            <br>
+            <small style="font-size:15px">Archives...</small>
+            <ul>
+                <li>
+                    <div>
 
-            <div style="display:none">
+                        <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
+                        <!--Article 2-->
+                        <!--Article Title-->
+                        <h2>
+                            Write posts with Markdown
+                        </h2>
+                        <!--Article Description-->
+                        <p>
+                            It's cumbersome to write html by hand. When you write a post, you want to focus on what
+                            you write, and not on the html structure. But you still need to format your text.
+                        </p>
+                        <!--Article Link-->
+                        <a href="Using-Markdown-to-write-posts.html">Continue Reading</a>
+                        <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
+                    </div>
+                </li>
 
-
-                <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
-                <!--Article 2-->
-                <!--Article Title-->
-                <h2>
-                    Using Markdown to write posts
-                </h2>
-                <!--Article Description-->
-                <p>
-                    It's cumbersome to write html by hand. When you write a blog post, you want to focus on what
-                    you write, and not on what html or css tags you will use here and there. On the other
-                    hand, you will still need to format your text in the end. How can Markdown help us in that regard ?
-                </p>
-                <!--Article Link-->
-                <a href="Using-Markdown-to-write-posts.html">Continue Reading</a>
-                <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
-            </div>
-
-            <div style="display:none">
-
-
-                <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
-                <!--Article 1-->
-                <!--Article Title-->
-                <h2>
-                    Why I'm making a custom blog
-                </h2>
-                <!--Article Description-->
-                <p>
-                    Why I'm making a custom blog instead of using ready-to-use solutions like Blogger, Medium or
-                    Wordpress.
-                </p>
-                <!--Article Link-->
-                <a href="Why-I'm-making-a-custom-blog.html">Continue Reading</a>
-                <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
-            </div>
+                <li>
+                    <div>
 
 
+                        <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
+                        <!--Article 1-->
+                        <!--Article Title-->
+                        <h2>
+                            Why I'm making a custom blog
+                        </h2>
+                        <!--Article Description-->
+                        <p>
+                            Why I'm making a custom blog instead of using ready-to-use solutions like Blogger, Medium
+                            or
+                            Wordpress.
+                        </p>
+                        <!--Article Link-->
+                        <a href="Why-I'm-making-a-custom-blog.html">Continue Reading</a>
+                        <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
+                    </div>
+                </li>
 
 
+            </ul>
         </section>
 
 
