add 'follow on twitter' button

--- a/minimalist-blog/index.html
+++ b/minimalist-blog/index.html
@@ -142,7 +142,15 @@
         <hr style="margin-top:30px">
 
         <footer>
-            Copyright 2018 Antoine Weber
+             Copyright 2018 Antoine Weber
+             <br>
+             <br>
+            <div>
+                <a href="https://twitter.com/antoineweber?ref_src=twsrc%5Etfw" class="twitter-follow-button"
+                data-show-count="false">Follow @antoineweber</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+            
         </footer>
     </div>
     <!--Fin du wrapper-->
