--- a/minimalist-blog/Why-is-it-worth-learn-programming.html
+++ b/minimalist-blog/Why-is-it-worth-learn-programming.html
@@ -45,9 +45,9 @@
 
         <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
 
-        <p>One of the best way to put it is: "To be able to talk to the computer". But it's not only to talk to the
-            computer. It's more like to use the computer as an extension of your brain, just like we use the machines
-            to extend our body limited capabilities. So what does a computer have to offer that we don't have already ?
+        <p>One of the best way to put it is: "To be able to talk to the computer". But it's more than that. It's more
+            like to use the computer as an extension of your brain, just like we use the machines to extend our body
+            limited capabilities. So what does a computer have to offer that we don't have already ?
         </p>
 
         <p>Relatively to our brain, a computer has:</p>
