portfolio redirects to slk333.surge.sh

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div class="flex"><a href="bootstrap/index.html">BOOSTRAP DEMO</a></div>
 				<div class="flex"><a href="i-bail/index.html">I-BAIL</a></div>
 				<div class="flex"><a href="minimalist-blog/index.html">BLOG</a></div>
-				<div class="flex"><a href="hello-gatsby/public/index.html">BLOG w/ GATSBY</a></div>
+				<div class="flex"><a href="https://slk333.surge.sh">BLOG w/ GATSBY</a></div>
 				<div></div>
 				<div></div>
 				<div></div>
